2017-10-05 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.h
	* DBHTMLWriter.m
	Start differentiating between HTML and pseudo-XLS

2017-10-05 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.h
	* DBHTMLWriter.m
	* DBCSVWriter.h
	* DBCSVWriter.m
	Provide file type constants.

2017-10-03 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.m
	Handle some HTML escaping.

2017-10-03 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.m
	Handle also unordered writing in HTML output.

2017-10-03 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
	* DBFileWriter.m
	* DBHTMLWriter.m
	Initialize from superclass properly

2017-10-02 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.h
	* DBSoapCSV.m
	writeStart and writeEnd for each writer.

2017-10-02 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.h
	* DBFileWriter.m
	* DBCSVWriter.m
	* DBHTMLWriter.m
	put also formatComplexObject in superclass

2017-09-25 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
	* DBFileWriter.h
	* DBFileWriter.m
	* DBHTMLWriter.m
	put setFieldNames in superclass

2017-09-25 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	* DBFileWriter.h
	* DBFileWriter.m
	* DBHTMLWriter.h
	* DBHTMLWriter.m
	put setStringEncoding in superclass

2017-09-25 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	* DBFileWriter.h
	* DBFileWriter.m
	* DBHTMLWriter.h
	* DBHTMLWriter.m
	put writeDataSet in superclass, as well as encoding info.

2017-09-25 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	* DBFileWriter.h
	* DBFileWriter.m
	Put writeOrder in super class

2017-09-25 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.m
	Better header/footer for HTML.

2017-09-21 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
        * DBSoap.m
        * DBSObject.m
        Make SOQL length defineable

2017-09-20 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	* DBHTMLWriter.h
	* DBHTMLWriter.m
	Factor out common File Writer class

2017-04-26 Riccardo Mottola <rm@gnu.org>

	* DBSObject.m